--- a/projects/kernel/code/CMakeLists.txt
+++ b/projects/kernel/code/CMakeLists.txt
@@ -4,6 +4,7 @@ project(kernel LANGUAGES C ASM)
 set(AGGREGATED_INTERFACE "${PROJECT_NAME}-i")
 add_library(${AGGREGATED_INTERFACE} INTERFACE)
 
+# TODO: Afer integration red zone, we can remove this flag here :)
 set(CMAKE_C_FLAGS
     "${CMAKE_C_FLAGS} -fno-pic -fno-pie -mcmodel=kernel -m64 -fno-stack-protector -mno-red-zone"
 )
@@ -20,6 +21,7 @@ add_project("abstraction/log")
 add_project("abstraction/text/converter")
 add_project("abstraction/interrupts")
 add_project("abstraction/time")
+add_project("abstraction/thread")
 add_project("abstraction/serial")
 add_project("abstraction/kernel")
 add_project("abstraction/memory/manipulation")
@@ -49,6 +51,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-efi-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-kernel)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-time)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-thread)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter)
