--- a/projects/os-loader/code/CMakeLists.txt
+++ b/projects/os-loader/code/CMakeLists.txt
@@ -12,6 +12,7 @@ add_project("abstraction/interrupts")
 add_project("abstraction/memory/manipulation")
 add_project("abstraction/memory/virtual")
 add_project("abstraction/time")
+add_project("abstraction/thread")
 add_project("abstraction/log")
 add_project("abstraction/jmp")
 add_project("abstraction/text/converter")
@@ -23,6 +24,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-efi)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-time)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-thread)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log)
