--- a/projects/x86/code/CMakeLists.txt
+++ b/projects/x86/code/CMakeLists.txt
@@ -13,6 +13,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("abstraction/log")
     add_project("abstraction/jmp")
     add_project("abstraction/time")
+    add_project("abstraction/thread")
     add_project("abstraction/interrupts")
     add_project("abstraction/text/converter")
     include("${REPO_PROJECTS}/print-configuration.cmake")
@@ -26,6 +27,7 @@ add_subdirectory(idt)
 add_subdirectory(gdt)
 add_subdirectory(jmp)
 add_subdirectory(time)
+add_subdirectory(thread)
 
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     fetch_and_write_project_targets()
