work on getting virtual memory mapper working

--- a/projects/shared/code/trees/red-black/CMakeLists.txt
+++ b/projects/shared/code/trees/red-black/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(
     "src/red-black/common.c"
     "src/red-black/basic.c"
     "src/red-black/memory-manager.c"
+    "src/red-black/virtual-mapping-manager.c"
 )
 
 add_includes_for_sublibrary()
