working on setting up stack overflow with guard pages

--- a/projects/shared/code/CMakeLists.txt
+++ b/projects/shared/code/CMakeLists.txt
@@ -11,6 +11,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("abstraction/log")
     add_project("abstraction/jmp")
     add_project("abstraction/interrupts")
+    add_project("abstraction/thread")
     add_project("abstraction/text/converter")
     add_project("abstraction/log")
     add_project("efi-to-kernel")
