--- a/projects/shared/code/memory/management/CMakeLists.txt
+++ b/projects/shared/code/memory/management/CMakeLists.txt
@@ -8,7 +8,10 @@ target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-thread-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 
