move to x86/kernel because shouldnt be used in os-loader

--- a/projects/abstraction/interrupts/code/CMakeLists.txt
+++ b/projects/abstraction/interrupts/code/CMakeLists.txt
@@ -1,14 +1,15 @@
 create_abstraction_targets(abstraction-interrupts)
 
 if(${ARCHITECTURE} STREQUAL "X86")
-    add_project("x86")
-    abstraction_add_sources(x86-idt)
     if(${ENVIRONMENT} STREQUAL "FREESTANDING")
+        add_project("x86")
         abstraction_add_sources(x86-idt)
+        add_project("x86/kernel")
+        abstraction_add_sources(x86-kernel-idt)
     elseif(${ENVIRONMENT} STREQUAL "EFI")
-        abstraction_add_sources(x86-idt)
+        message(FATAL_ERROR "Not possible")
     elseif(${ENVIRONMENT} STREQUAL "POSIX")
-        abstraction_add_sources(x86-idt)
+        message(FATAL_ERROR "Not possible")
     else()
         message(FATAL_ERROR "Could not match ENVIRONMENT variable")
     endif()
