--- a/projects/x86/code/serial/CMakeLists.txt
+++ b/projects/x86/code/serial/CMakeLists.txt
@@ -6,5 +6,6 @@ add_includes_for_sublibrary()
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-serial-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
