ist stuff seems to work, now need to implement..

--- a/projects/abstraction/interrupts/code/CMakeLists.txt
+++ b/projects/abstraction/interrupts/code/CMakeLists.txt
@@ -7,7 +7,8 @@ if(${ARCHITECTURE} STREQUAL "X86")
         add_project("x86/kernel")
         abstraction_add_sources(x86-kernel-idt)
     elseif(${ENVIRONMENT} STREQUAL "EFI")
-        message(FATAL_ERROR "Not possible")
+        add_project("efi")
+        abstraction_add_sources(efi-interrupts)
     elseif(${ENVIRONMENT} STREQUAL "POSIX")
         message(FATAL_ERROR "Not possible")
     else()
