make x86 abstraction function calls yippee

--- a/projects/efi-to-kernel/code/CMakeLists.txt
+++ b/projects/efi-to-kernel/code/CMakeLists.txt
@@ -8,6 +8,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     include(${REPO_PROJECTS}/setup.cmake)
     add_project("shared")
     add_project("abstraction/jmp")
+    add_project("abstraction/memory/virtual")
     include(${REPO_PROJECTS}/print-configuration.cmake)
 endif()
 
@@ -18,6 +19,7 @@ add_includes_for_sublibrary()
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     fetch_and_write_project_targets()
