some more math prettiering

--- a/projects/image-builder/code/CMakeLists.txt
+++ b/projects/image-builder/code/CMakeLists.txt
@@ -35,6 +35,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter)
 target_link_libraries(${PROJECT_NAME} PRIVATE posix-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-maths)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-text)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-log)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-text)
