--- a/projects/abstraction/interrupts/code/CMakeLists.txt
+++ b/projects/abstraction/interrupts/code/CMakeLists.txt
@@ -10,7 +10,11 @@ if(${ARCHITECTURE} STREQUAL "X86")
         add_project("efi")
         abstraction_add_sources(efi-interrupts)
     elseif(${ENVIRONMENT} STREQUAL "POSIX")
-        message(FATAL_ERROR "Not possible")
+        # NOTE: This is not allowed realistically, but for now adding it so I can compile my tests
+        add_project("x86")
+        abstraction_add_sources(x86-idt)
+        add_project("x86/kernel")
+        abstraction_add_sources(x86-kernel-idt)
     else()
         message(FATAL_ERROR "Could not match ENVIRONMENT variable")
     endif()
