--- a/projects/shared/code/trees/red-black/tests/CMakeLists.txt
+++ b/projects/shared/code/trees/red-black/tests/CMakeLists.txt
@@ -15,6 +15,9 @@ target_include_directories(
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-thread)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log)
@@ -25,7 +28,10 @@ target_link_libraries(${PROJECT_NAME} PRIVATE posix-test-framework)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-text)
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-maths)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-trees-red-black)
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-converter)
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-policy)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-allocator)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-management)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-management-status)
