wip: red black node compaction

--- a/projects/shared/code/trees/red-black/CMakeLists.txt
+++ b/projects/shared/code/trees/red-black/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(
     ${PROJECT_NAME}
     OBJECT
     "src/red-black/common.c"
-    "src/red-black/basic.c"
+    # "src/red-black/basic.c"
     "src/red-black/memory-manager.c"
     "src/red-black/virtual-mapping-manager.c"
 )
