--- a/projects/os-loader/code/CMakeLists.txt
+++ b/projects/os-loader/code/CMakeLists.txt
@@ -47,7 +47,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE efi-globals)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-uefi-i)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel)
+target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
 target_include_directories(
     ${PROJECT_NAME}
