--- a/projects/x86/code/CMakeLists.txt
+++ b/projects/x86/code/CMakeLists.txt
@@ -9,6 +9,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("efi-to-kernel")
     add_project("abstraction/memory/manipulation")
     add_project("abstraction/memory/virtual")
+    add_project("abstraction/memory/virtual/status")
     add_project("abstraction/serial")
     add_project("abstraction/log")
     add_project("abstraction/jmp")
