--- a/projects/x86/code/memory/virtual/status/CMakeLists.txt
+++ b/projects/x86/code/memory/virtual/status/CMakeLists.txt
@@ -1,11 +1,17 @@
-project(x86-memory-virtual LANGUAGES C ASM)
-add_library(${PROJECT_NAME} OBJECT "src/virtual.c")
+project(x86-memory-virtual-status LANGUAGES C ASM)
+add_library(${PROJECT_NAME} OBJECT "src/status.c")
 
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
-target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
+target_link_libraries(
+    ${PROJECT_NAME}
+    PRIVATE abstraction-memory-virtual-status-i
+)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
@@ -15,5 +21,3 @@ target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE freestanding-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
-
-add_subdirectory(status)
