--- a/projects/shared/code/trees/red-black/CMakeLists.txt
+++ b/projects/shared/code/trees/red-black/CMakeLists.txt
@@ -12,6 +12,8 @@ add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
