--- a/projects/os-loader/code/CMakeLists.txt
+++ b/projects/os-loader/code/CMakeLists.txt
@@ -37,6 +37,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE shared-maths)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-uuid)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-converter)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-management)
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-management-status)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-allocator)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-trees-red-black)
 
