--- a/projects/freestanding/code/CMakeLists.txt
+++ b/projects/freestanding/code/CMakeLists.txt
@@ -9,6 +9,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     add_project("shared")
     add_project("efi-to-kernel")
     add_project("abstraction/log")
+    add_project("abstraction/efi-to-kernel")
     add_project("abstraction/jmp")
     add_project("abstraction/interrupts")
     add_project("abstraction/serial")
