--- a/projects/os-loader/code/CMakeLists.txt
+++ b/projects/os-loader/code/CMakeLists.txt
@@ -7,6 +7,7 @@ add_project("shared")
 add_project("efi")
 add_project("efi/uefi")
 add_project("efi-to-kernel")
+add_project("abstraction/efi-to-kernel")
 add_project("abstraction/efi")
 add_project("abstraction/memory/manipulation")
 add_project("abstraction/memory/virtual")
