--- a/projects/x86/efi/code/CMakeLists.txt
+++ b/projects/x86/efi/code/CMakeLists.txt
@@ -8,6 +8,7 @@ if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
     include(${REPO_PROJECTS}/setup.cmake)
     add_project("shared")
     add_project("x86")
+    add_project("x86/efi-to-kernel")
     add_project("efi")
     add_project("efi-to-kernel")
     add_project("abstraction/log")
@@ -45,6 +46,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE x86-efi-to-kernel-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
