--- a/projects/freestanding/code/peripheral/screen/CMakeLists.txt
+++ b/projects/freestanding/code/peripheral/screen/CMakeLists.txt
@@ -10,3 +10,4 @@ target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE freestanding-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-efi-to-kernel-i)
