--- a/projects/kernel/code/CMakeLists.txt
+++ b/projects/kernel/code/CMakeLists.txt
@@ -17,6 +17,7 @@ add_project("efi-to-kernel")
 add_project("freestanding")
 add_project("abstraction/jmp")
 add_project("abstraction/efi")
+add_project("abstraction/efi-to-kernel")
 add_project("abstraction/log")
 add_project("abstraction/text/converter")
 add_project("abstraction/interrupts")
@@ -49,6 +50,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE efi-to-kernel-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-efi-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-efi-to-kernel)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-interrupts)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-kernel)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-time)
