--- a/projects/shared/code/memory/allocator/CMakeLists.txt
+++ b/projects/shared/code/memory/allocator/CMakeLists.txt
@@ -12,12 +12,12 @@ add_library(
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
-target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-log-i)
-target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-text-converter-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-jmp-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
+
+add_subdirectory(status)
 
 if(${BUILD} STREQUAL "UNIT_TEST")
     add_subdirectory(tests)
