--- a/projects/shared/code/trees/red-black/tests/CMakeLists.txt
+++ b/projects/shared/code/trees/red-black/tests/CMakeLists.txt
@@ -33,5 +33,6 @@ target_link_libraries(${PROJECT_NAME} PRIVATE shared-trees-red-black)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-converter)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-policy)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-allocator)
+target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-allocator-status)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-management)
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-memory-management-status)
