set up additional build definitions

--- a/projects/x86/efi/code/CMakeLists.txt
+++ b/projects/x86/efi/code/CMakeLists.txt
@@ -30,9 +30,25 @@ set(SOURCE_FILES
     "src/kernel.c"
 )
 if(${VENDOR} STREQUAL "INTEL")
-    list(APPEND SOURCE_FILES "src/init/intel.c")
+    list(APPEND SOURCE_FILES "src/intel/init.c")
+    list(APPEND SOURCE_FILES "src/intel/time.c")
 elseif(${VENDOR} STREQUAL "AMD")
-    list(APPEND SOURCE_FILES "src/init/amd.c")
+    list(APPEND SOURCE_FILES "src/amd/init.c")
+    if(${UNDERLYING} STREQUAL "QEMU")
+        list(APPEND SOURCE_FILES "src/amd/time/qemu.c")
+    elseif(${UNDERLYING} STREQUAL "HARDWARE")
+        list(APPEND SOURCE_FILES "src/amd/time/hardware.c")
+    else()
+        message(FATAL_ERROR "Could not find matching ${UNDERLYING}")
+    endif()
+else()
+    message(FATAL_ERROR "Could not find matching ${VENDOR}")
+endif()
+
+if(${AVX_512})
+    list(APPEND SOURCE_FILES "src/avx512/enforced.c")
+else()
+    list(APPEND SOURCE_FILES "src/avx512/ignored.c")
 endif()
 
 add_library(${PROJECT_NAME} OBJECT ${SOURCE_FILES})
