--- a/projects/x86/code/memory/CMakeLists.txt
+++ b/projects/x86/code/memory/CMakeLists.txt
@@ -1,9 +1,10 @@
 project(x86-memory LANGUAGES C ASM)
-add_library(${PROJECT_NAME} OBJECT "src/page.c")
+add_library(${PROJECT_NAME} OBJECT "src/page.c" "src/flags.c")
 
 add_includes_for_sublibrary()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
 
