--- a/projects/x86/code/configuration/CMakeLists.txt
+++ b/projects/x86/code/configuration/CMakeLists.txt
@@ -6,5 +6,6 @@ add_includes_for_sublibrary()
 target_link_libraries(${PROJECT_NAME} PRIVATE shared-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-manipulation-i)
+target_link_libraries(${PROJECT_NAME} PRIVATE abstraction-memory-virtual-i)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE x86-i)
